# portfolio_report

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  plan.md  pyproject.toml
examples/: portfolio.csv  portfolio.yaml
notebooks/: test_llm_integration.ipynb
scripts/: refresh_cassettes.sh
src/portfolio_report/: __main__.py  cli.py  config.py  portfolio_loader.py
src/portfolio_report/analysis/: aggregator.py  technical.py  valuation.py
src/portfolio_report/api/: __init__.py  app.py  deps.py  errors.py  schemas.py  serializers.py
src/portfolio_report/data/: cache.py  fundamental_fallback.py  naver_client.py  naver_parser.py  price_client.py  ticker_resolver.py
src/portfolio_report/llm/: base.py  cache.py  claude_client.py  prompts.py
src/portfolio_report/models/: __init__.py  holding.py  portfolio.py  stock.py
tests/: conftest.py  test_aggregator_fallback.py  test_claude_cache.py  test_claude_stream.py  test_fundamental_fallback.py  test_llm_cache.py  test_markdown.py  test_naver_parser.py  test_prompts.py  test_valuation.py
tests/api/: test_app_smoke.py  test_cli_serve.py  test_llm_stream_route.py  test_portfolio_route.py  test_semaphore.py  test_serializers.py  test_technical_route.py
tests/cassettes/: test_fetch_main_info_returns_per_and_eps.yaml  test_fetch_snapshot_returns_expected_fields.yaml  test_fetch_wisereport_returns_beta.yaml
tests/data/: test_naver_client_vcr.py
web/: .dockerignore  .env.example  Dockerfile  next.config.ts  package-lock.json  package.json
web/src/app/: layout.tsx  (+1 more)
(+32 files in other folders)
