[project]
name = "portfolio-report"
version = "0.1.0"
description = "한국 주식 포트폴리오 PER/베타/기술적 분석 리포트 생성기"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "pandas>=2.2",
    "pykrx>=1.0.45",
    "finance-datareader>=0.9.90",
    "pandas-ta>=0.3.14b",
    "plotly>=5.22",
    "typer>=0.12",
    "rich>=13.7",
    "diskcache>=5.6",
    "anthropic>=0.34",
    "pyyaml>=6.0",
    "setuptools>=70,<81",
]

[project.scripts]
portfolio-report = "portfolio_report.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portfolio_report"]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-vcr>=1.0",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]
